vertical overflow not fixed
img problem is fixed
Organised css file
vertical scroll not fixed
made some corrections to margin and padding

--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+
+/* GENERAL */
+
+* {
+    outline: solid 1px red;
+}
 body{
     margin: 0;
+    padding: 0;/*remove when vertical scroll ok*/
     display: flex;
     flex-direction: column;
     font-family: Roboto Mono Light;
+    background-color: white;
 }
 @font-face {
     font-family: Roboto Mono;
@@ -12,61 +20,95 @@ body{
     font-family: Roboto Mono Light;
     src: url(Fonts/Roboto_Mono/static/RobotoMono-Light.ttf);
 }
-#navbar{
-    top: 0;
-    position: fixed;
-    align-self: flex-end;
-    min-width: fit-content;
-    padding: 1rem 2rem;
-}
-ul{
-    display: flex;
-    list-style: none;
-}
-li{
-    padding: 1rem;
+img{
+    width: 100%;
 }
 a{
     text-decoration: none;
     font-size: 1.5em;
-    
+    color: black;
 }
+
+/* NAVBAR */
+
+#navbar{
+    display: flex;
+    top: 0;
+    left: 0;
+    position: fixed;
+    justify-content: flex-end;
+    padding: 1rem 2rem;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
+}
+ul{
+    display: flex;
+    list-style: none;
+    /* float: right; */
+    margin-right: 2rem;
+}
+li{
+    /* padding: 1rem; */
+    /* display: list-item; why ?*/
+}
+#navbar a{
+    font-size: 1.75em;
+    padding: 1rem;
+    display: block; /* why ?*/
+}
+#navbar a:hover{
+    background-color: rgba(128, 128, 128, 0.24);
+    border-radius: 0.375rem;
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-underline-offset: 0.5rem;
+}
+
+/* WELCOME SECTION */
+
 #welcome-section{
-    margin: 6rem 5rem;
     height: 100vh;
-    text-align: center;
+    width: 100%;
     font-family: Roboto Mono!important;
-    padding: 4rem;
     font-size: 2em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 h1{
     padding: 4rem;
 }
 #welcome-section img{
-    width: 8rem;
-    height: 8rem;
+    width: 12rem;
+    height: 12rem;
     border-radius: 50%;
 }
-main{
-    top: 130px;
-    position: relative;
-    margin: 5rem;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-#projects-title{
-    text-decoration: underline;
-    font-size: 2em;
-}
+
+/* PROJECTS */
+
 #projects{
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+#projects-title p{
+    max-width: fit-content;
+    padding-left: 2rem;
+    font-size: 2em;
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-underline-offset: 0.5rem;
 }
 .projects-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(550px,1fr));
     grid-gap: 4rem;
+    width: 100%;
+    overflow:scroll;
 }
 .project-tile{
     margin: 2rem;
@@ -75,44 +117,47 @@ main{
     border: 1px solid white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19);
 }
+.project-tile img{
+    object-fit: cover;
+    display: block; /*why?*/
+}
 .project-tile p{
     text-align: center;
 }
-.project-tile a img{
-    object-fit: cover;
-}
+
+/* FOOTER */
+
 footer{
     display: flex;
     flex-direction: column;
     height: 80vh;
-    margin: 8rem 5rem;
     justify-content: space-between;
+    width: 100%;
 }
 #link-to-social{
     display: flex;
-    margin: 2rem;
-    justify-content: space-evenly;
+    justify-content: center;
 }
-#social-link-title{
+#social-link-title p{
     font-size: 2em;
-    margin: 2rem;
+    padding-left: 2rem;
+    max-width: fit-content;
 }
 .social-link a{
-    min-width: fit-content;
     display: flex;
-    margin: 2rem;
+    align-items: center;
+    margin: 1rem;
+    padding: 2rem;
+}
+.social-link a p{
+    padding: 1rem;
 }
 .social-link a img{
     height: 2rem;
     width: 2rem;
     padding: 1rem;
 }
-#profile-link{
-
-}
 #copyright{
     text-align: center;
-}
-img{
-    width: 100%;
+    font-size: 1.5em;
 }
